[FE] Implemented basic login/registration layout

--- a/frontend/src/layout/Body/Header/Header.scss
+++ b/frontend/src/layout/Body/Header/Header.scss
@@ -6,7 +6,9 @@
   align-items: center;
   padding: 0px 15px 0px 15px;
   .left-section {
-
+      .logo:hover {
+        cursor: pointer;
+      }
   }
   .right-section {
     .header-user-menu {
